--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "multer": "^1.4.3",
+    "morgan": "^1.10.0",
     "yargs": "^17.1.0"
   }
 }
